RESOLVED FIXED15563
Fix conflict with X11 Window type in WebCore
https://bugs.webkit.org/show_bug.cgi?id=15563
Summary Fix conflict with X11 Window type in WebCore
Rodney Dawes
Reported 2007-10-19 07:54:22 PDT
X11 has a Window type which causes conflicts when building with #include <X11/Xlib.h>. To resolve this, we must use KJS::Window everywhere, rather than just Window, and avoid "using KJS::Window;". The attached patch fixes this, so that this conflict is resolved.
Attachments
Patch to use KJS::Window instead of just Window where appropriate (15.97 KB, patch)
2007-10-19 07:55 PDT, Rodney Dawes
darin: review-
Updated patch with darin's suggestions (12.39 KB, patch)
2007-10-19 11:26 PDT, Rodney Dawes
darin: review+
Updated patch with ChangeLog entry (13.18 KB, patch)
2007-10-19 11:33 PDT, Rodney Dawes
darin: review+
Rodney Dawes
Comment 1 2007-10-19 07:55:04 PDT
Created attachment 16731 [details] Patch to use KJS::Window instead of just Window where appropriate
Darin Adler
Comment 2 2007-10-19 10:56:21 PDT
Comment on attachment 16731 [details] Patch to use KJS::Window instead of just Window where appropriate I don't think the references to Window that are inside the KJS namespace need to change. So that means we don't need any changes to kjs_window.h, JSXMLHttpRequest.cpp, or kjs_binding.cpp. Could you try tossing the changes to those files? Otherwise this looks great.
Rodney Dawes
Comment 3 2007-10-19 11:26:02 PDT
Created attachment 16732 [details] Updated patch with darin's suggestions
Darin Adler
Comment 4 2007-10-19 11:27:45 PDT
Comment on attachment 16732 [details] Updated patch with darin's suggestions Looks good. Needs ChangeLog.
Rodney Dawes
Comment 5 2007-10-19 11:33:58 PDT
Created attachment 16733 [details] Updated patch with ChangeLog entry
Mark Rowe (bdash)
Comment 6 2007-10-20 03:30:59 PDT
Landed in r26816. Thanks for the patch! One minor nit -- you had used tabs in your ChangeLog entry so I had to tweak it before landing.
Note You need to log in before you can comment on or make changes to this bug.