WebCore/bindings/js/kjs_events.cpp
@@ -66,7 +66,7 @@ void JSAbstractEventListener::handleEvent(Event* ele, bool isWindowEvent)
     if (!listener)
         return;
 
-    Window* window = windowObj();
+    KJS::Window* window = windowObj();
     // Null check as clearWindowObj() can clear this and we still get called back by
     // xmlhttprequest objects. See http://bugs.webkit.org/show_bug.cgi?id=13275
     if (!window)
@@ -97,7 +97,7 @@ void JSAbstractEventListener::handleEvent(Event* ele, bool isWindowEvent)
         List args;
         args.append(toJS(exec, event));
 
-        // Set the event we're handling in the Window object
+        // Set the event we're handling in the KJS::Window object
         window->setCurrentEvent(event);
         // ... and in the interpreter
         interpreter->setCurrentEvent(event);
@@ -152,13 +152,13 @@ bool JSAbstractEventListener::isHTMLEventListener() const
 
 // -------------------------------------------------------------------------
 
-JSUnprotectedEventListener::JSUnprotectedEventListener(JSObject* listener, Window* win, bool html)
+JSUnprotectedEventListener::JSUnprotectedEventListener(JSObject* listener, KJS::Window* win, bool html)
     : JSAbstractEventListener(html)
     , m_listener(listener)
     , m_win(win)
 {
     if (m_listener) {
-        Window::UnprotectedListenersMap& listeners = html
+        KJS::Window::UnprotectedListenersMap& listeners = html
             ? m_win->jsUnprotectedHTMLEventListeners() : m_win->jsUnprotectedEventListeners();
         listeners.set(m_listener, this);
     }
@@ -167,7 +167,7 @@ JSUnprotectedEventListener::JSUnprotectedEventListener(JSObject* listener, Windo
 JSUnprotectedEventListener::~JSUnprotectedEventListener()
 {
     if (m_listener && m_win) {
-        Window::UnprotectedListenersMap& listeners = isHTMLEventListener()
+        KJS::Window::UnprotectedListenersMap& listeners = isHTMLEventListener()
             ? m_win->jsUnprotectedHTMLEventListeners() : m_win->jsUnprotectedEventListeners();
         listeners.remove(m_listener);
     }
@@ -178,7 +178,7 @@ JSObject* JSUnprotectedEventListener::listenerObj() const
     return m_listener;
 }
 
-Window* JSUnprotectedEventListener::windowObj() const
+KJS::Window* JSUnprotectedEventListener::windowObj() const
 {
     return m_win;
 }
@@ -214,13 +214,13 @@ static EventListenerCounter eventListenerCounter;
 
 // -------------------------------------------------------------------------
 
-JSEventListener::JSEventListener(JSObject* listener, Window* win, bool html)
+JSEventListener::JSEventListener(JSObject* listener, KJS::Window* win, bool html)
     : JSAbstractEventListener(html)
     , m_listener(listener)
     , m_win(win)
 {
     if (m_listener) {
-        Window::ListenersMap& listeners = html
+        KJS::Window::ListenersMap& listeners = html
             ? m_win->jsHTMLEventListeners() : m_win->jsEventListeners();
         listeners.set(m_listener, this);
     }
@@ -232,7 +232,7 @@ JSEventListener::JSEventListener(JSObject* listener, Window* win, bool html)
 JSEventListener::~JSEventListener()
 {
     if (m_listener && m_win) {
-        Window::ListenersMap& listeners = isHTMLEventListener()
+        KJS::Window::ListenersMap& listeners = isHTMLEventListener()
             ? m_win->jsHTMLEventListeners() : m_win->jsEventListeners();
         listeners.remove(m_listener);
     }
@@ -246,7 +246,7 @@ JSObject* JSEventListener::listenerObj() const
     return m_listener;
 }
 
-Window* JSEventListener::windowObj() const
+KJS::Window* JSEventListener::windowObj() const
 {
     return m_win;
 }
@@ -258,7 +258,7 @@ void JSEventListener::clearWindowObj()
 
 // -------------------------------------------------------------------------
 
-JSLazyEventListener::JSLazyEventListener(const String& functionName, const String& code, Window* win, Node* node, int lineNumber)
+JSLazyEventListener::JSLazyEventListener(const String& functionName, const String& code, KJS::Window* win, Node* node, int lineNumber)
     : JSEventListener(0, win, true)
     , m_functionName(functionName)
     , m_code(code)
@@ -334,7 +334,7 @@ void JSLazyEventListener::parseCode() const
     m_code = String();
 
     if (m_listener) {
-        Window::ListenersMap& listeners = isHTMLEventListener()
+        KJS::Window::ListenersMap& listeners = isHTMLEventListener()
             ? windowObj()->jsHTMLEventListeners() : windowObj()->jsEventListeners();
         listeners.set(m_listener, const_cast<JSLazyEventListener*>(this));
     }
