WebCore/bindings/js/kjs_proxy.cpp
@@ -81,7 +81,7 @@ JSValue* KJSProxy::evaluate(const String& filename, int baseLine, const String& 
     // so we start the keep alive timer here.
     m_frame->keepAlive();
     
-    JSValue* thisNode = Window::retrieve(m_frame);
+    JSValue* thisNode = KJS::Window::retrieve(m_frame);
   
     m_script->startTimeoutCheck();
     Completion comp = m_script->evaluate(filename, baseLine, reinterpret_cast<const KJS::UChar*>(str.characters()), str.length(), thisNode);
@@ -103,10 +103,10 @@ JSValue* KJSProxy::evaluate(const String& filename, int baseLine, const String& 
 
 void KJSProxy::clear() {
   // clear resources allocated by the interpreter, and make it ready to be used by another page
-  // We have to keep it, so that the Window object for the frame remains the same.
+  // We have to keep it, so that the KJS::Window object for the frame remains the same.
   // (we used to delete and re-create it, previously)
   if (m_script) {
-    Window *win = Window::retrieveWindow(m_frame);
+    KJS::Window *win = KJS::Window::retrieveWindow(m_frame);
     if (win)
         win->clear();
   }
@@ -116,7 +116,7 @@ EventListener* KJSProxy::createHTMLEventHandler(const String& functionName, cons
 {
     initScriptIfNeeded();
     JSLock lock;
-    return new JSLazyEventListener(functionName, code, Window::retrieveWindow(m_frame), node, m_handlerLineno);
+    return new JSLazyEventListener(functionName, code, KJS::Window::retrieveWindow(m_frame), node, m_handlerLineno);
 }
 
 #if ENABLE(SVG)
@@ -124,7 +124,7 @@ EventListener* KJSProxy::createSVGEventHandler(const String& functionName, const
 {
     initScriptIfNeeded();
     JSLock lock;
-    return new JSSVGLazyEventListener(functionName, code, Window::retrieveWindow(m_frame), node, m_handlerLineno);
+    return new JSSVGLazyEventListener(functionName, code, KJS::Window::retrieveWindow(m_frame), node, m_handlerLineno);
 }
 #endif
 
