WebCore/page/Chrome.cpp
@@ -369,7 +369,7 @@ PageGroupLoadDeferrer::PageGroupLoadDeferrer(Page* page, bool deferSelf)
 
 #if !PLATFORM(MAC)
             for (Frame* frame = otherPage->mainFrame(); frame; frame = frame->tree()->traverseNext()) {
-                if (Window* window = Window::retrieveWindow(frame)) {
+                if (KJS::Window* window = KJS::Window::retrieveWindow(frame)) {
                     PausedTimeouts* timeouts = window->pauseTimeouts();
 
                     m_pausedTimeouts.append(make_pair(frame, timeouts));
@@ -396,7 +396,7 @@ PageGroupLoadDeferrer::~PageGroupLoadDeferrer()
     count = m_pausedTimeouts.size();
 
     for (size_t i = 0; i < count; i++) {
-        Window* window = Window::retrieveWindow(m_pausedTimeouts[i].first.get());
+        KJS::Window* window = KJS::Window::retrieveWindow(m_pausedTimeouts[i].first.get());
         if (window)
             window->resumeTimeouts(m_pausedTimeouts[i].second);
         delete m_pausedTimeouts[i].second;
